--- a/ai-un-blog/package.json
+++ b/ai-un-blog/package.json
@@ -9,12 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "next": "15.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.1.4"
-  },
-  "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "yarn": "^1.22.22"
   }
 }
