--- a/ai-un-blog/package.json
+++ b/ai-un-blog/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "draft-js": "^0.11.7",
     "next": "15.1.4",
+    "next-auth": "^5.0.0-beta.25",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-quill-new": "^3.3.3",
     "yarn": "^1.22.22"
   }
 }
