--- a/ai-un-blog/package.json
+++ b/ai-un-blog/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.4",
     "@prisma/client": "^6.2.1",
+    "dotenv": "^16.4.7",
     "draft-js": "^0.11.7",
     "next": "15.1.4",
     "next-auth": "^5.0.0-beta.25",
