Added firebase, writing, other stuff

--- a/ai-un-blog/package.json
+++ b/ai-un-blog/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^6.2.1",
     "dotenv": "^16.4.7",
     "draft-js": "^0.11.7",
+    "firebase": "^11.2.0",
     "next": "15.1.4",
     "next-auth": "^5.0.0-beta.25",
     "react": "^19.0.0",
