--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.4",
+    "@mailchimp/mailchimp_marketing": "^3.0.80",
     "@prisma/client": "^6.2.1",
     "dotenv": "^16.4.7",
     "draft-js": "^0.11.7",
@@ -19,6 +20,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-quill-new": "^3.3.3",
+    "supports-color": "^10.0.0",
     "yarn": "^1.22.22"
   },
   "devDependencies": {
